Fri Mar 18 03:00:16 GMT 2011  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: Ignore *.css and *.js by default too.

Thu Mar 17 23:34:07 GMT 2011  Olly Betts <olly@survex.com>

	* omindex.cc: For skip messages which are only to be shown in verbose
	  mode, call skip with new SKIP_VERBOSE_ONLY flag.  Pass new
	  SKIP_SHOW_FILENAME flag for skip messages shown before we say what
	  file we are indexing so we know to show the filename even in verbose
	  mode.

Thu Mar 17 03:47:54 GMT 2011  Olly Betts <olly@survex.com>

	* omindex.cc: Restore handling of exceptions from
	  DirectoryIterator::get_type(), and handle exceptions from
	  DirectoryIterator::next() which ended up at the top level
	  before (though they probably never happen, at least on Linux).

Wed Mar 16 06:19:01 GMT 2011  Olly Betts <olly@survex.com>

	* omindex.cc: Push all the code associated with indexing a file into
	  index_file().

Wed Mar 16 02:55:53 GMT 2011  Olly Betts <olly@survex.com>

	* omindex.cc: Push try block around index_file() call into the
	  function.

Wed Mar 16 02:51:52 GMT 2011  Olly Betts <olly@survex.com>

	* omindex.cc: Factor out handling for skipping files, and improve
	  these messages by consistently reporting the filename.

Tue Mar 15 12:47:12 GMT 2011  Olly Betts <olly@survex.com>

	* docs/Makefile.am,docs/index.rst: Add index page which links to all
	  the other documentation pages.

Tue Mar 15 12:20:30 GMT 2011  Olly Betts <olly@survex.com>

	* omindex.cc: Add --empty-docs option to allow documents we extract
	  no body text from to be indexed (existing behaviour), skipped, or
	  reported and then indexed.

Fri Mar 04 14:13:47 GMT 2011  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Minor improvements.

Wed Mar 02 11:17:42 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Update.

Wed Mar 02 06:14:41 GMT 2011  Olly Betts <olly@survex.com>

	* docs/termprefixes.rst: New standard prefix E for filename extension.