@@ -1,3 +1,7 @@
+Fri Mar 18 05:53:21 GMT 2011  Olly Betts <olly@survex.com>
+
+	* diritor.h: Avoid using S_IRUSR, etc under __WIN32__.
+
 Fri Mar 18 03:00:16 GMT 2011  Olly Betts <olly@survex.com>
 
 	* docs/overview.rst,omindex.cc: Ignore *.css and *.js by default too.
